--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
+  "homepage": "https://principle1224.github.io/myweb/",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -19,6 +25,7 @@
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
+
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/react": "^19.1.9",
@@ -27,6 +34,7 @@
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.0"
   }
